# pdr-ukraine-fastapi

./: Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024-07-31_init_questions_image_models.py  2024-07-31_init_questions_models.py  2024-07-31_init_user_model.py
app/: config.py  database.py  dependencies.py  main.py
app/models/: auth.py  mixins.py  questions.py
app/routers/: __init__.py  auth.py
app/schemas/: auth.py  questions.py
app/services/: auth.py
app/utils/: enums.py  oauth.py  repositories.py
