[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["AstralMortem <chaliukvladyslav@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
itsdangerous = "^2.2.0"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
fastapi = "^0.111.0"
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^13.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
